--- a/i3/config
+++ b/i3/config
@@ -202,6 +202,9 @@ bar {
 
 ## Launch at the startup
 
+# Lock screen after 15 minutes idle timeout
+exec --no-startup-id xautolock -time 15 -locker 'dm-tool lock'
+
 # Network manager
 exec --no-startup-id nm-applet
 
