--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -12,29 +12,45 @@ general {
 }
 
 order += "volume master"
-#order += "ipv6"
 order += "disk /"
-#order += "run_watch DHCP"
-#order += "run_watch VPN"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery 0"
-order += "load"
+#order += "load"
+order += "cpu_usage"
 order += "tztime local"
 
+
+volume master {
+   format = "🔊 %volume "
+   format_muted = "🔇 "
+   device = "default"
+   mixer = "Master"
+   mixer_idx = 0
+}
+
+disk "/" {
+        format = "%avail"
+}
+
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+        format_up = "📶 %quality at %essid [%ip]"
+        format_down = "📶 ❌"
 }
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_up = "🖧 %speed [%ip]"
+        format_down = "🖧 ❌"
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
+        format = "%status %percentage [%remaining]"
+	
+	integer_battery_capacity = true
+	
+	status_chr = 🔌
+	status_bat = 🔋
 }
 
 #run_watch DHCP {
@@ -46,22 +62,23 @@ battery 0 {
 #}
 
 tztime local {
-        format = "📅 %Y-%m-%d 🕰️ %H:%M:%S"
+        format = "%Y/%m/%d %H:%M:%S"
 }
 
-load {
-        format = "%1min"
+#load {
+#        format = "%5min"
+#}
+
+cpu_usage {
+
+	format = "%usage"
+
+	degraded_threshold = 50 
+	format_above_degraded_threshold = "🚀 %usage"	
+
+	max_threshold = 80
+	format_above_threshold = "🚀 %usage"
+	
 }
 
-disk "/" {
-        format = "%avail"
-}
-
-volume master {
-   format = "🔊 %volume "
-   format_muted = "🔇 "
-   device = "default"
-   mixer = "Master"
-   mixer_idx = 0
-}
 
