--- a/i3/config
+++ b/i3/config
@@ -20,7 +20,7 @@ floating_modifier $mod
 # bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec xterm
 #bindsym $mod+Return exec gnome-terminal
-bindsym $mod+Return exec urxvt 
+bindsym $mod+Return exec xfce4-terminal 
 
 # kill focused window
 bindsym $mod+Shift+q kill
