--- a/i3/config
+++ b/i3/config
@@ -16,6 +16,9 @@ font pango:DejaVu Sans Mono 9
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# Do not warp mouse cursor when switching between workspaces
+mouse_warping none
+
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec xterm
@@ -114,6 +117,15 @@ bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
+
+# move focused workspace to the monitor on the left
+bindsym $mod+Control+Home move workspace to output left
+# move focused workspace to the monitor on the right
+bindsym $mod+Control+End  move workspace to output right
+# move focused workspace to the monitor above (Page Up -> Prior)
+bindsym $mod+Control+Prior move workspace to output up
+# move focused workspace to the monitor below (Page Down -> Next)
+bindsym $mod+Control+Next move workspace to output down
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
