--- a/i3/config
+++ b/i3/config
@@ -175,9 +175,9 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Volume controls
-bindsym XF86AudioRaiseVolume exec amixer set Master 5%+
-bindsym XF86AudioLowerVolume exec amixer set Master 5%-
-bindsym XF86AudioMute exec amixer set Master toggle
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5%
+bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle
 
 # Media player controls
 bindsym XF86AudioPlay exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
@@ -221,9 +221,6 @@ bar {
 
 # Lock screen after 15 minutes idle timeout
 #exec --no-startup-id xautolock -time 15 -locker 'dm-tool lock'
-
-# Start volume control applet
-exec --no-startup-id volumeicon
 
 # Network manager applet
 exec --no-startup-id nm-applet
