[i3] install and setup compton compozite manager

--- a/i3/config
+++ b/i3/config
@@ -219,6 +219,9 @@ bar {
 
 ## Launch at the startup
 
+# Start composite manager
+exec --no-startup-id compton
+
 # Lock screen after 15 minutes idle timeout
 #exec --no-startup-id xautolock -time 15 -locker 'dm-tool lock'
 
