--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -54,7 +54,7 @@ glx-swap-method = "undefined";
 #################################
 
 # Enabled client-side shadows on windows.
-shadow = true;
+shadow = false;
 # Don't draw shadows on DND windows.
 no-dnd-shadow = true;
 # Avoid drawing shadows on dock/panel windows.
@@ -78,26 +78,8 @@ shadow-opacity = 0.5;
 # The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
-shadow-exclude = [
-    "! name~=''",
-    "name = 'Notification'",
-    "name = 'Plank'",
-    "name = 'Docky'",
-    "name = 'Kupfer'",
-    "name = 'xfce4-notifyd'",
-    "name *= 'VLC'",
-    "name *= 'compton'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
-    "name *= 'Firefox'",
-    "class_g = 'Conky'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Synapse'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Cairo-dock'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'"
-];
+shadow-exclude = [];
+
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = false;
 
@@ -136,7 +118,7 @@ blur-background-exclude = [
 #################################
 
 # Fade windows during opacity changes.
-fading = true;
+fading = false;
 # The time between steps in a fade in milliseconds. (default 10).
 fade-delta = 4;
 # Opacity change between steps while fading in. (default 0.028).
