[desktop] update desktop shortcuts to run scripts via bash

--- a/applications/dock-at-home.desktop
+++ b/applications/dock-at-home.desktop
@@ -2,7 +2,7 @@
 Name=Dock at home
 Comment=Dock laptop to monitor at homw
 Icon=utilities-terminal
-Exec=~/.bin/dock-at-home
+Exec=bash -c "~/.bin/dock-at-home"
 Terminal=false
 Type=Application
 Categories=System;
