--- a/applications/undock.desktop
+++ b/applications/undock.desktop
@@ -2,7 +2,7 @@
 Name=Undock to go mobile
 Comment=Undock laptop from monitor to go mobile
 Icon=utilities-terminal
-Exec=~/.bin/undock
+Exec=bash -c "~/.bin/undock"
 Terminal=false
 Type=Application
 Categories=System;
