--- a/i3/config
+++ b/i3/config
@@ -29,17 +29,11 @@ bindsym $mod+Return exec xfce4-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-#bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-#bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-#bindsym $mod+d exec --no-startup-id synapse --startup
-bindsym $mod+d exec --no-startup-id "rofi -show combi -modi combi -combi-modi drun,ssh"
+# program launcher
+bindsym $mod+d exec --no-startup-id "rofi -show combi -modi combi -combi-modi drun,ssh -show-icons"
 
 # window switcher
-bindsym $mod+Tab exec --no-startup-id rofi -show window
+bindsym $mod+Tab exec --no-startup-id rofi -show window -show-icons
 
 # change focus
 #bindsym $mod+j focus left
