--- a/applications/go-sync-my-projects.desktop
+++ b/applications/go-sync-my-projects.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
-Name=Sync projects
-Comment=Sync projects directory to Solaris
+Name=Sync my projects
+Comment=Sync my projects directory to Solaris
 Icon=utilities-terminal
-Exec=bash -c "~/.bin/go-sync-my-project && printf '\033[33mSync complete. \nPress any key to exit..\033[0m\n' && read -n 1"
+Exec=bash -c "~/.bin/go-sync-my-projects && printf '\033[33mSync complete. \nPress any key to exit..\033[0m\n' && read -n 1"
 Terminal=true
 Type=Application
 Categories=System;
