--- a/i3/config
+++ b/i3/config
@@ -12,7 +12,8 @@ set $mod Mod4
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 9
-font pango: M+ 1m, FontAwesome, Ionicons, 9
+#font pango: M+ 1m, FontAwesome, Ionicons, 9
+font pango: JetBrainsMono Nerd Font, 9
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
