--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -30,18 +30,18 @@ volume master {
 }
 
 disk "/" {
-        format = "%avail"
+        format = " %avail"
 }
 
 wireless _first_ {
-        format_up = "📶 %quality at %essid [%ip]"
-        format_down = "📶 ❌"
+        format_up = " %quality at %essid [%ip]"
+        format_down = " "
 }
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
-        format_up = "🖧 %speed [%ip]"
-        format_down = "🖧 ❌"
+        format_up = " %speed [%ip]"
+        format_down = " "
 }
 
 battery 0 {
@@ -49,8 +49,8 @@ battery 0 {
 	
 	integer_battery_capacity = true
 	
-	status_chr = 🔌
-	status_bat = 🔋
+	status_chr = 
+	status_bat = 
 }
 
 #run_watch DHCP {
@@ -62,7 +62,7 @@ battery 0 {
 #}
 
 tztime local {
-        format = "%Y/%m/%d %H:%M:%S"
+        format = " %Y/%m/%d %H:%M:%S"
 }
 
 #load {
@@ -74,10 +74,10 @@ cpu_usage {
 	format = "%usage"
 
 	degraded_threshold = 50 
-	format_above_degraded_threshold = "🚀 %usage"	
+	format_above_degraded_threshold = " %usage"	
 
 	max_threshold = 80
-	format_above_threshold = "🚀 %usage"
+	format_above_threshold = " %usage"
 	
 }
 
