--- a/i3/config
+++ b/i3/config
@@ -22,10 +22,7 @@ floating_modifier $mod
 mouse_warping none
 
 # start a terminal
-# bindsym $mod+Return exec i3-sensible-terminal
-#bindsym $mod+Return exec xterm
-#bindsym $mod+Return exec gnome-terminal
-bindsym $mod+Return exec xfce4-terminal 
+bindsym $mod+Return exec alacritty 
 
 # kill focused window
 bindsym $mod+Shift+q kill
