--- a/i3/config
+++ b/i3/config
@@ -2,8 +2,8 @@
 # vadyalex i3wm config
 #
 
-# Use WINDOWS key as mod key
-set $mod Mod4
+# Use ALT key as mod key
+set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -22,7 +22,7 @@ floating_modifier $mod
 mouse_warping none
 
 # start a terminal
-bindsym $mod+Return exec alacritty 
+bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
