[attune, pine] adjast mod key to ALT instead of SUPER + additional configuration updates

--- a/i3/config
+++ b/i3/config
@@ -237,7 +237,7 @@ exec --no-startup-id ibus-daemon
 exec --no-startup-id ~/.bin/go-paint-my-desktop
 
 # Start Dropbox
-exec --no-startup-id dropbox start
+exec --no-startup-id volumeicon
 
 # Make Nautilus stop shoding desktop icons
 exec --no-startup-id gsettings set org.gnome.desktop.background show-desktop-icons false
