--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -9,17 +9,17 @@ window:
 
 font:
     normal:
-        family: JetBrains Mono Nerd Font
+        family: JetBrainsMono Nerd Font
         style: Regular
     bold:
-        family: JetBrains Mono Nerd Font
+        family: JetBrainsMono Nerd Font
         style: Bold
     italic:
-        family: JetBrains Mono Nerd Font
+        family: JetBrainsMono Nerd Font
         style: Italic
 
     # Point size of the font
-    size: 7
+    size: 14
 
 # Colors (Solarized Dark)
 colors:
