--- a/i3/config
+++ b/i3/config
@@ -3,7 +3,9 @@
 #
 
 # Use ALT key as mod key
-set $mod Mod1
+#set $mod Mod1
+# Use SUPER key as mod key
+set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
