[attune, i3] pipewire + pulse audio control

--- a/i3/config
+++ b/i3/config
@@ -238,8 +238,5 @@ exec --no-startup-id ibus-daemon
 # Set fancy background
 exec --no-startup-id ~/.bin/go-paint-my-desktop
 
-# Start Dropbox
-exec --no-startup-id volumeicon
-
 # Make Nautilus stop shoding desktop icons
-exec --no-startup-id gsettings set org.gnome.desktop.background show-desktop-icons false
+#exec --no-startup-id gsettings set org.gnome.desktop.background show-desktop-icons false
